tests/negative/gold/as4_test.gold
tests/negative/as4_test.toit:4:8: error: Type 'none' is only allowed as return type
  4 as none
       ^~~~
Compilation failed.
